--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=8c429312fa298db7471102188efdfa4a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL=postgresql://elsam:1ac02691@127.0.0.1:5432/YB_db
+DATABASE_URL="mysql://root:@127.0.0.1:3306/YB_db?serverVersion=8&charset=utf8mb4"
+#DATABASE_URL="postgresql://elsam:1ac02691@127.0.0.1:5432/YB_db"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
